gccida/c3/validize_mem
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validize_mem/src/explow.c:1101:26: error: use of undeclared identifier 'machine_mode'
if ( memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)ref), rtwint) ) 
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validize_mem/src/explow.c:1101:41: error: expected expression
if ( memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)ref), rtwint) ) 
                                        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validize_mem/src/obj/explow.o] Error 1
